feat(CBS-280274:LN-59163): resolve memory leaks, and future cancellations
Refs: LN-59215 LN-59214 LN-59213 LN-59212