@@ -1,7 +1,7 @@
 package ir.dotin.loan.trade.adapters.driven.fcbmessaging.health;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 public class FcbRemoteHealthState {
 
     private static final int MAX_TRACKED_HOSTS = 64;
+    private static final long STALE_THRESHOLD_MINUTES = 5;
 
     private final ConcurrentMap<String, FcbRemoteHealthSnapshot> byHost = new ConcurrentHashMap<>();
 
@@ -20,13 +21,16 @@ public class FcbRemoteHealthState {
             return;
         }
         if (byHost.size() >= MAX_TRACKED_HOSTS && !byHost.containsKey(host)) {
-            return;
+            evictStaleHosts();
+            if (byHost.size() >= MAX_TRACKED_HOSTS) {
+                return;
+            }
         }
         byHost.put(host, snapshot);
     }
 
     public List<FcbRemoteHealthSnapshot> allSnapshots() {
-        return Collections.unmodifiableList(new ArrayList<>(byHost.values()));
+        return List.copyOf(byHost.values());
     }
 
     public boolean hasAnyFreshSnapshot() {
@@ -44,5 +48,10 @@ public class FcbRemoteHealthState {
         }
         FcbRemoteHealthSnapshot s = byHost.get(host);
         return s != null ? s : FcbRemoteHealthSnapshot.empty();
+    }
+
+    private void evictStaleHosts() {
+        Instant threshold = Instant.now().minus(STALE_THRESHOLD_MINUTES, ChronoUnit.MINUTES);
+        byHost.entrySet().removeIf(entry -> entry.getValue().observedAt().isBefore(threshold));
     }
 }
